force-app/main/default/objects/Manual_Batch__c/Manual_Batch__c.object-meta.xml
<CustomObject>
    <description>Batch table used to track batches entered directly on gifts and not through Luminate batch functionality</description>
    <label>Manual Batch</label>
    <nameField>
        <displayFormat>MBAT-{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>