force-app/main/default/objects/Manual_Batch__c/fields/Manual_Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Batch_Name__c</fullName>
    <label>Manual Batch Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>