force-app/main/default/objects/Manual_Batch__c/listViews/Open_Manual_Batches.listView-meta.xml
<ListView>
    <fullName>Open_Manual_Batches</fullName>
    <columns>NAME</columns>
    <columns>Manual_Batch_Name__c</columns>
    <columns>Total_Items__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>Open Manual Batches</label>
</ListView>